Revert "Fix fixed ribbon on mobile" It didn't help
This reverts commit e7ade41fc5f45b9423a4263b9f74944ec6a6eaae.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -163,7 +163,6 @@ p {
 
         #ribbon-vert {
             position: fixed;
-            -webkit-backface-visibility: hidden;
             content:" ";
             z-index: -1000;
             top: 0;
